# pytorch-deep-learning

./: docker-compose.yml  dockerfile  pyproject.toml
