[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
torchvision = "^0.11.1"
jupyterlab = "^3.2.1"
torchinfo = "^1.5.3"
torchmetrics = "^0.6.0"
pandas = "^1.3.4"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"